# peer

./: .gitignore  CMakeLists.txt  peer-environment.yml  run_full_build.sh
.github/workflows/: build-python-only.yml  build-r-only.yml  build.yml
R/: CMakeLists.txt  Makefile  Makevars
R/peer/: DESCRIPTION
R/peer/src/: Makevars
cmake/: FindNumpy.cmake  FindPythonInst.cmake  FindPythonLibsDist.cmake  FindR.cmake
conda_forge_python/: create_python_package.sh
conda_forge_python/peer_template/: pyproject.toml
cran/: create_source_new.sh  package_r_only.sh
cran/peer_template/: DESCRIPTION
cran/peer_template/src/: Makevars
include/: array_helper.h  bayesnet.h
python/: CMakeLists.txt  setup.py  swig_typemaps.i
scripts/: .Rhistory  install_packages_locally.sh  package_r_python.sh  run_full_build.sh
src/: CMakeLists.txt  bayesnet.cpp
standalone_packages/R/: create_standalone_R.sh
standalone_python/: create_python_package.sh
standalone_python/peer_template/: setup.py
